<resources>
    <string name="app_name">SmartKitchen</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment 1</string>
    <string name="hello_blank_fragment_2">Hello blank fragment 2</string>
    <string name="hello_blank_fragment_3">Hello blank fragment 3</string>

    <string name="button_diaria">Diaria</string>
    <string name="button_nuevas">Nuevas</string>
    <string name="button_top">Top</string>
    <string name="barra_buscar">Buscar</string>
    <string name="error">Error</string>

    <!-- for dialog messages -->
    <string name="title_dialog">Por implementar</string>
    <string name="message_dialog">Esta funcionalidad todavía no se encuentra implementada, en UmpaLumpaLabs están trabajando para usted</string>
    <string name="accept_button">Aceptar</string>
    <string name="cancel_button">Cancelar</string>
    <string name="title_activity_login">¡Bienvenido!</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login_button">Login</string>
    <string name="register_button">Register</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- welcome text -->
    <string name="welcome_text">¡SmartKitchen tu nueva forma de cocinar!</string>

<<<<<<< HEAD
    <!-- for Smart Assistant -->
    <string name="recipe_tittle">Recipe title</string>
    <string name="title_activity_step_tabbed">StepTabbedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Paso: %1$d</string>
    <string name="step_page_header">Step page header</string>
    <string name="step_title">Step title</string>
    <string name="step_text">Step text Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque congue, urna vitae molestie aliquet, elit orci porta nunc, non blandit nisl erat sit amet arcu. Etiam lacinia scelerisque elit in ornare. </string>

    <!-- for instruction diaglog -->
    <string name="instruction_title_dialog">Instrucciones de uso de SmartKitchen</string>
    <string name="instruction_message_dialog">¡Bienvenido a su asistente de cocina! Mientras cocina diga la palabra [siguiente] o [atrás] para despalzarse entre los pasos. SmartKitchen soporta conversaciones detectando las palabras.</string>
=======
>>>>>>> master
</resources>
