<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smartkitchen.smartkitchen.assistants.StepTabbedActivity$PlaceholderFragment">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">


            <TextView
                android:id="@+id/section_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:padding="10dp"
                android:textColor="@color/colorWhite"
                android:background="@drawable/layout_border"
                android:text="@string/step_page_header"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <ImageView
                android:id="@+id/step_image"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@mipmap/ic_launcher"/>
            <TextView
                android:id="@+id/step_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="15dp"
                android:textStyle="bold"
                android:text="@string/step_title" />
            <TextView
                android:id="@+id/step_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:background="@drawable/layout_border_text"
                android:text="@string/step_text"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>